// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. single inline element 1`] = `
<View>
  <Text>
    Lindsay McIntosh, Scottish Political Editor
  </Text>
</View>
`;

exports[`2. with the author in the begining 1`] = `
<View>
  <Text>
    Camilla Long
  </Text>
  <Text>
    , Environment Editor
  </Text>
</View>
`;

exports[`3. with the author at the end 1`] = `
<View>
  <Text>
    RBS Six Nations, 
  </Text>
  <Text>
    Mike Atherton
  </Text>
</View>
`;

exports[`4. with multiple authors separated by a pipe 1`] = `
<View>
  <Text>
    Camilla Long
  </Text>
  <Text>
     | 
  </Text>
  <Text>
    Mike Atherton
  </Text>
  <Text>
     | 
  </Text>
  <Text>
    Alexandra Frean
  </Text>
</View>
`;

exports[`5. with multiple authors separated by text with commas 1`] = `
<View>
  <Text>
    Camilla Long
  </Text>
  <Text>
    , 
  </Text>
  <Text>
    Mike Atherton
  </Text>
  <Text>
    , 
  </Text>
  <Text>
    Alexandra Frean
  </Text>
</View>
`;

exports[`6. with multiple authors separated by spaces 1`] = `
<View>
  <Text>
    Camilla Long
  </Text>
  <Text>
     
  </Text>
  <Text>
    Mike Atherton
  </Text>
  <Text>
    Alexandra Frean
  </Text>
</View>
`;

exports[`7. null with an empty ast 1`] = `null`;
